@startuml Restaurant_Manager_BCE_Pattern



!define BOUNDARY_COLOR #E3F2FD
!define CONTROL_COLOR #E8F5E9
!define ENTITY_COLOR #FFF3E0
!define BEAN_COLOR #FCE4EC

skinparam linetype polyline
skinparam packageStyle rectangle
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam defaultFontName Arial
skinparam classAttributeIconSize 0

skinparam nodesep 100
skinparam ranksep 80
skinparam linetype ortho


title Restaurant Manager - BCE Pattern Architecture

' ============================================================================
' BOUNDARY LAYER - Interfacce con l'esterno
' ============================================================================

package "<<Boundary>>" <<Rectangle>> BOUNDARY_COLOR {

    package "view" {

        class LoginController <<boundary>> {
            - txtUsername: TextField
            - txtPassword: PasswordField
            --
            + handleLogin(ActionEvent): void
            - navigateToRoleView(String): void
        }


        class WaiterController <<boundary>> {

            + handleNewOrder(): void
            + refreshData(): void
            + handleProfileMenu(): void
        }

        Interface View


        class TakeOrderController <<boundary>> {
            + handleSend(): void
            + handleCancel(): void
        }


    }

}

' ============================================================================
' CONTROL LAYER - Logica di business e coordinamento
' ============================================================================

package "<<Control>>" <<Rectangle>> CONTROL_COLOR {

    package "controller" {


        interface MenuUseCase <<control>> {
            + getAllProducts(): List<ProductBean>
            + saveProduct(ProductBean): void
            + deleteProduct(int): void
            + updateProduct(ProductBean): void
            + getProductById(int): ProductBean
        }




        class MenuService <<control>> implements MenuUseCase {
            - productDAO: ProductDAO
            --
            + getAllProducts(): List<ProductBean>
            + saveProduct(ProductBean): void
            + deleteProduct(int): void
            + updateProduct(ProductBean): void
            + getProductById(int): ProductBean
        }
    }

    package "service" {

        class SecurityService <<control>> {
            --
            + {static} hashPassword(String): String
            + {static} verifyPassword(String, String): boolean
            + {static} authenticate(String, String): UserBean
        }



        class BeanMapper <<control>> {
            --
            + {static} toProductBean(MenuProduct): ProductBean
            + {static} toMenuProduct(ProductBean): MenuProduct
            + {static} toUserBean(User): UserBean
            + {static} toUser(UserBean): User
            + {static} toOrderBean(Order): OrderBean
            + {static} toOrder(OrderBean): Order
        }


    }
}

' ============================================================================
' ENTITY LAYER - Entità di dominio, bean e persistenza
' ============================================================================

package "<<Entity>>" <<Rectangle>> ENTITY_COLOR {

    ' ========================================
    ' Domain Model Entities
    ' ========================================

    package "model" {

        class MenuProduct <<entity>> {
            - id: int
            - name: String
            - category: String
            - price: BigDecimal
            - available: boolean
            - description: String
            --
            + setter/getter
            + isAvailable(): boolean
            + setAvailable(boolean): void
        }

        class Order <<entity>> {
            - id: int
            - tableNumber: int
            - waiter: String
            - timestamp: LocalDateTime
            - status: String
            - totalAmount: BigDecimal
            - items: List<OrderItem>
            - paymentMethod: String
            --
            + setter/getter
        }

        class OrderItem <<entity>> {
            - product: MenuProduct
            - quantity: int
            - notes: String
            - subtotal: BigDecimal
            --
            + setter/getter
            + calculateSubtotal(): BigDecimal
        }

        class User <<entity>> {
            - username: String
            - passwordHash: String
            - role: String
            - displayName: String
            - active: boolean
            --
            + setter/getter
        }
    }

    ' ========================================
    ' Java Beans (Data Transfer Objects)
    ' ========================================

    package "bean" <<Rectangle>> BEAN_COLOR {

        class ProductBean <<bean>> {
            - id: int
            - name: String
            - category: String
            - price: BigDecimal
            - available: boolean
            - description: String
            --
            + setter/getter
        }

        class OrderBean <<bean>> {
            - id: int
            - tableNumber: int
            - waiter: String
            - timestamp: LocalDateTime
            - status: String
            - totalAmount: BigDecimal
            - items: List<OrderItemBean>
            - paymentMethod: String
            --
            + setter/getter
        }

        class OrderItemBean <<bean>> {
            - productId: int
            - productName: String
            - quantity: int
            - notes: String
            - unitPrice: BigDecimal
            - subtotal: BigDecimal
            --
            + setter/getter
        }




    }

    ' ========================================
    ' Data Access Objects (DAO)
    ' ========================================

    package "dao" {

        interface ProductDAO <<entity>> {
            + findAll(): List<MenuProduct>
            + findById(int): MenuProduct
            + save(MenuProduct): void
            + update(MenuProduct): void
            + delete(int): void
            + findByCategory(String): List<MenuProduct>
        }



        interface OrderDAO <<entity>> {
            + findAll(): List<Order>
            + findById(int): Order
            + save(Order): void
            + update(Order): void
            + delete(int): void
            + findByDateRange(LocalDate, LocalDate): List<Order>
            + findByStatus(String): List<Order>
        }

        class DatabaseProductDAO <<entity>> implements ProductDAO {
            --
            + findAll(): List<MenuProduct>
            + findById(int): MenuProduct
            + save(MenuProduct): void
            + update(MenuProduct): void
            + delete(int): void
            - mapResultSetToProduct(ResultSet): MenuProduct
        }



        class DatabaseOrderDAO <<entity>> implements OrderDAO {
            --
            + findAll(): List<Order>
            + findById(int): Order
            + save(Order): void
            + update(Order): void
            + delete(int): void
            + findByDateRange(LocalDate, LocalDate): List<Order>
            - mapResultSetToOrder(ResultSet): Order
        }
    }

    ' ========================================
    ' Supporting Entities
    ' ========================================




}

' ============================================================================
' RELATIONSHIPS - BCE Pattern
' ============================================================================

' Boundary -> Control
LoginController ..> SecurityService : authenticates with

WaiterController ..> MenuUseCase





WaiterController -- TakeOrderController

LoginController     .up.|> View
WaiterController    .up.|> View



TakeOrderController .up.|> View

' Control -> Control

MenuService .down.> BeanMapper : converts
SecurityService .down.> BeanMapper : converts

' Control -> Entity (DAO)

MenuService --> ProductDAO : uses


' Control <-> Bean
MenuUseCase ..> ProductBean : transfers
BeanMapper ..> ProductBean : creates

BeanMapper ..> OrderBean : creates
BeanMapper ..> OrderItemBean : creates

' Entity (DAO) -> Entity (Model)
DatabaseProductDAO .down.> MenuProduct : persists

DatabaseOrderDAO .down.> Order : persists


' Entity (Model) relationships
Order *-- "1..*" OrderItem : contains
OrderItem --> MenuProduct : references
OrderBean *-- "1..*" OrderItemBean : contains

' Bean <-> Entity mapping
BeanMapper ..> MenuProduct : converts from
BeanMapper ..> User : converts from
BeanMapper ..> Order : converts from


legend right
  |<BOUNDARY_COLOR>| **Boundary** | Interfacce con l'esterno (View, CLI, Entry Points) |
  |<CONTROL_COLOR>| **Control** | Logica di business e coordinamento |
  |<ENTITY_COLOR>| **Entity** | Entità di dominio e persistenza |
  |<BEAN_COLOR>| **Bean** | Data Transfer Objects (DTO) |
endlegend

@enduml
